# chatter

./: .gitignore  Cargo.toml  LICENSE  README.md  TEMPLATE_USAGE.md  build.sh  homebrew-chatter-formula.rb  homebrew-chatter-readme.md  setup-homebrew-tap.sh  test_agent.md
.github/workflows/: apt-release.yml  docs.yml  release.yml
Formula/: chatter.rb
docs/: book.toml
docs/book/: 404.html  agent-mode.html  configuration.html  development.html  index.html  installation.html  interactive-chat.html  print.html  providers.html  searcher-c2a407aa.js  searchindex-909dd796.js  searchindex-faa60665.js  searchindex.js  sessions.html  toc-3cd2db54.js  toc.html  toc.js  usage.html
docs/src/: SUMMARY.md  agent-mode.md  configuration.md  development.md  installation.md  interactive-chat.md  introduction.md  providers.md  sessions.md  usage.md
src/: main.rs
src/agent/: completion.rs  executor.rs  mod.rs  safety.rs  tools.rs
src/api/: client.rs  llm.rs  mod.rs  models.rs  ollama.rs  streaming.rs
src/chat/: agent_commands.rs  display.rs  history.rs  mod.rs  session.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  settings.rs
src/templates/: builtin.rs  mod.rs  storage.rs
