[package]
name = "chatter"
version = "0.1.0"
edition = "2021"
description = "A terminal-based chat interface for Google's Gemini AI"
license = "MIT"
repository = "https://github.com/tomatyss/chatter"
keywords = ["ai", "gemini", "chat", "cli", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "chatter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.24"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
futures-util = "0.3"
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
walkdir = "2.4"
regex = "1.10"
rustyline = { version = "14.0", features = ["with-file-history"] }

[dev-dependencies]
tokio-test = "0.4"
